--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chisato-WhatsApp",
+  "name": "𝙏𝘼𝙍𝙏𝘼𝙂𝙇𝙄𝘼-𝘽𝙊𝙏✩",
   "description": "A WhatsApp Bot written in TypeScript using Baileys.",
   "keywords": [
     "bot",
@@ -13,10 +13,10 @@
   "success_url": "/",
   "env": {
     "BOT_NAME": {
-        "description": "Name of your bot"
+        "description": "𝙏𝘼𝙍𝙏𝘼𝙂𝙇𝙄𝘼 𝘽𝙊𝙏✩"
     },
     "PREFIX": {
-      "description": "Prefix of your bot"
+      "description": "!"
     },
     "SESSION": {
       "description": "A string for the session to be classified and to get access to the server endpoints"
